<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="start"
            android:text="@string/farmereats"
            android:textColor="#4F4F4F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailCardView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/emailCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:gravity="start"
            android:text="@string/forgot_password"
            android:textColor="#4F4F4F"
            android:textSize="33sp"

            app:layout_constraintBottom_toTopOf="@+id/textViewRememberPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailCardView"
            app:layout_constraintStart_toStartOf="@id/emailCardView"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textViewRememberPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="start"
            android:text="@string/remember_your_password"
            android:textColor="@color/windowBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/emailCardView"
            app:layout_constraintStart_toStartOf="@id/emailCardView"
            app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:gravity="start"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewRememberPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailCardView"
            app:layout_constraintStart_toEndOf="@id/textViewRememberPassword"
            app:layout_constraintTop_toTopOf="@id/textViewRememberPassword" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailCardView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRememberPassword">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/windowBackground"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:startIconDrawable="@drawable/ic_outline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:hint="@string/phone_number"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/textColorSecondaryDark"
                    android:textColorHint="@color/textColorSecondary"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="330dp"
            android:fontFamily="@font/outfit_regular"
            android:padding="12dp"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="50dp"
            app:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailCardView"
            app:layout_constraintStart_toStartOf="@+id/emailCardView"
            app:layout_constraintTop_toBottomOf="@+id/emailCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>