<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#282828">

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:cardCornerRadius="50dp"
        app:cardElevation="2.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:fontFamily="@font/outfit_regular"
                android:text="Quality, Convenient, Local"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_mxlarge"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginRight="@dimen/spacing_mxlarge"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:text="Find Featured and Premium \nItem From Our Store"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_join"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/join_the_movement"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="30dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
